// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SubmitButton component > render with all props 1`] = `
<div>
  <button
    class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-6 rounded disabled:opacity-75 disabled:hover:bg-blue-500 w-full"
    disabled=""
    type="submit"
  >
    Submit form
  </button>
</div>
`;

exports[`SubmitButton component > render with required props 1`] = `
<div>
  <button
    class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-6 rounded disabled:opacity-75 disabled:hover:bg-blue-500 "
    type="submit"
  >
    Submit form
  </button>
</div>
`;
